--- a/index4.html
+++ b/index4.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="index4.html">Attendance</a>
               </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Schedule</a>
+                      <a class="nav-link" href="index5.html">Schedule</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index3.html">Homework</a>
