--- a/index5.html
+++ b/index5.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_2.css">
+    <link rel="stylesheet" href="style_5.css">
     <link rel="stylesheet" href="css/all.css">
     <title></title>
   </head>
@@ -52,7 +52,124 @@
             </nav>
 
 
+            <div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                          <p class="text-center">18 - 20 APRIL 2021</p>
+                      </div>
+                      <div class="carousel-item">
+                              <p class="text-center">22 - 27 APRIL 2021</p>
+                      </div>
+                      <div class="carousel-item">
+                            <p class="text-center"> 27 - 31 APRIL 2021</p>
+                      </div>
+                    </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="" aria-hidden="true"><h5>Prev<i class="fas fa-arrow-left"></i></h5></span>
 
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="" aria-hidden="true "><h5>Next<i class="fas fa-arrow-right"></i></h5></span>
+
+              </a>
+            </div>
+
+            <table class="table container-fluid table table-striped table-hover align-middle">
+              <thead>
+                <tr class="align-middle">
+                  <th id="number" ></th>
+                  <th >8.00 - 9-20</th>
+                  <th >9.40 - 11.00</th>
+                  <th >11.20 - 12.40</th>
+                  <th >13.00 - 14.20</th>
+                  <th >14.40 - 16.00</th>
+                  <th>16.20 - 17.40</th>
+                  <th >18.00 - 19.20</th>
+                  <th> 19.40 - 21.00</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td id="number">MON</td>
+                  <td></td>
+                  <td></td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                  <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                  <td id="number">TUE</td>
+                  <td></td>
+                  <td></td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                  <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                  <td id="number">WEB</td>
+                  <td ></td>
+                  <td></td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td></td>
+                      <td></td>
+                </tr>
+                <tr>
+                  <td id="number">THU</td>
+                  <td ></td>
+                  <td></td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td></td>
+                      <td></td>
+                </tr>
+                <tr>
+                  <td id="number">FRI</td>
+                  <td> </td>
+                  <td></td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>Js <br> ABS-6789 <span class="align-top">21</span> </td>
+                  <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td>HTML & Css <br> ABS-1234 <span class="align-top">16</span> </td>
+                    <td></td>
+                      <td></td>
+                </tr>
+                <tr>
+                  <td id="number">SAT</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td id="number">SUN</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+                </tr>
+
+
+              </tbody>
+            </table>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
   </body>
