--- a/index5.html
+++ b/index5.html
@@ -75,7 +75,7 @@
             </div>
 
             <table class="table container-fluid table table-striped table-hover align-middle">
-              <thead>
+              <thead class="table-primary">
                 <tr class="align-middle">
                   <th id="number" ></th>
                   <th >8.00 - 9-20</th>
@@ -87,7 +87,7 @@
                   <th >18.00 - 19.20</th>
                   <th> 19.40 - 21.00</th>
                 </tr>
-              </thead>
+              </thead >
               <tbody>
                 <tr>
                   <td id="number">MON</td>
