--- a/index4.html
+++ b/index4.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <link rel="stylesheet" href="style_2.css">
+    <link rel="stylesheet" href="style_4.css">
     <link rel="stylesheet" href="css/all.css">
     <title></title>
   </head>
@@ -51,17 +51,136 @@
               </div>
             </nav>
 
+<p class="text-center mt-5">23 APRIL, TUESDAY</p>
+
+<ul class="nav nav-tabs ml-4">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">1 Lesson</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">2 Lesson</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">3 Lesson</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="#">4 Lesson</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">5 Lesson</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">6 Lesson</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">7 Lesson</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="#">8 Lesson</a>
+  </li>
+
+
+</ul>
+<div class="row">
+<div class="group ml-5 mt-3 col-1">
+<p><span>Group</span> <br> <br> ABC-1234 </p>
+</div>
+<div class="Subject col-1 mt-3">
+<p><span>Subject</span> <br> <br> HTML & CSS </p>
+</div>
+<div class="Lesson_topic ml-5 col-4">
+  <p class="mt-3 "> <span>Lesson topic</span> </p>
+  <input class="form-control form-control-lg" type="text" placeholder="" aria-label=".form-control-lg example">
+</div>
+
+<div class="col-3 Homework ml-3 mt-4">
+  <p> <span>Homework</span> </p>
+<button type="button" class="btn btn-secondary bg-info">Add Homework</button>
+</div>
+</div>
+
+<div class="container-fluid mt-4">
+  <table class="table align-middle">
+    <thead class="table-primary align-middle">
+      <tr>
+        <th id="number" ></th>
+        <th id="widch">Name</th>
+        <th >GPAS</th>
+        <th >Is present</th>
+        <th >Test</th>
+        <th >Classwork</th>
+        <th >Comment</th>
+      </tr>
+    </thead>
+    <tbody class="align-middle">
+      <tr>
+        <td id="number">1</th>
+        <td id="widch">Aston Hickman</td>
+        <td>10</td>
+          <td class="align-middle">
+            <br><p>
+              <label class="radio1"><input type="radio" name="b"><span></span> </label>
+              <label class="radio2"><input type="radio" name="c"><span></span> </label>
+            <label class="radio3"><input type="radio" name="g" checked><span></span></label></p>
+            <td></i><select class="form-select table_form" ><option selected>-</option></td>
+                <td></i><select class="form-select table_form" ><option selected>-</option></td>
+                  <td><div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label"></label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div></td>
+      </tr>
+      <tr>
+        <td id="number">2</th>
+        <td id="widch">Mischa Roberson</td>
+        <td>9</td>
+          <td>        <label class="radio1"><input type="radio" name="b"><span></span> </label>
+                  <label class="radio2"><input type="radio" name="c"><span></span> </label>
+                <label class="radio3"><input type="radio" name="g" checked><span></span></label></p></td>
+              <td class=".mx-auto"></i><select class="form-select table_form" ><option selected>-</option></td>
+                <td></i><select class="form-select table_form" ><option selected>-</option></td>
+                  <td><div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label"></label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div></td>
+      </tr>
+      <tr>
+        <td id="number">3</th>
+        <td id="widch">Jaydon Metcalfe</td>
+        <td>11</td>
+          <td>        <label class="radio1"><input type="radio" name="b"><span></span> </label>
+                  <label class="radio2"><input type="radio" name="c"><span></span> </label>
+                <label class="radio3"><input type="radio" name="g" checked><span></span></label></p></td>
+            <td class="align:middle;"></i><select class="form-select table_form" ><option selected>-</option></td>
+              <td></i><select class="form-select table_form" ><option selected>-</option></td>
+                <td><div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label"></label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div></td>
+      </tr>
+      <tr>
+        <td id="number">4</th>
+        <td id="widch">Gary Jacobson</td>
+        <td>8</td>
+          <td>        <label class="radio1"><input type="radio" name="b"><span></span> </label>
+                  <label class="radio2"><input type="radio" name="c"><span></span> </label>
+                <label class="radio3"><input type="radio" name="g" checked><span></span></label></p></td>
+            <td></i><select class="form-select table_form" ><option selected>-</option></td>
+              <td></i><select class="form-select table_form" ><option selected>-</option></td>
+                <td><div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label "></label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 
 
 
 
-
-
-
-
-
-
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
   </body>
 </html>
