--- a/index5.html
+++ b/index5.html
@@ -75,7 +75,7 @@
             </div>
 
             <table class="table container-fluid table table-striped table-hover align-middle">
-              <thead class="table-primary">
+              <thead class="table-primary align-middle">
                 <tr class="align-middle">
                   <th id="number" ></th>
                   <th >8.00 - 9-20</th>
@@ -88,7 +88,7 @@
                   <th> 19.40 - 21.00</th>
                 </tr>
               </thead >
-              <tbody>
+              <tbody class="text-center">
                 <tr>
                   <td id="number">MON</td>
                   <td></td>
