--- a/index5.html
+++ b/index5.html
@@ -76,7 +76,7 @@
 
             <table class="table container-fluid table table-striped table-hover align-middle">
               <thead class="table-primary align-middle">
-                <tr class="align-middle">
+                <tr class="">
                   <th id="number" ></th>
                   <th >8.00 - 9-20</th>
                   <th >9.40 - 11.00</th>
@@ -88,7 +88,7 @@
                   <th> 19.40 - 21.00</th>
                 </tr>
               </thead >
-              <tbody class="text-center">
+              <tbody class="">
                 <tr>
                   <td id="number">MON</td>
                   <td></td>
