--- a/index4.html
+++ b/index4.html
@@ -51,7 +51,7 @@
               </div>
             </nav>
 
-<p class="text-center mt-5">23 APRIL, TUESDAY</p>
+<p class="text-center tt mt-5">23 APRIL, TUESDAY</p>
 
 <ul class="nav nav-tabs ml-4">
   <li class="nav-item">
