--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
 <div class="user">
 
 <p>Username</p>
-<input type="text" placeholder="     Enter username">
+<input type="text" class="active" placeholder="     Enter username"  >
 
 <p id="padding">Password</p>
 <input type="password" placeholder="     Enter Password">
