--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
                   </ul>
 
                   <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                      <a class="nav-link" href="index2.html"><i class="fas fa-bell"></i></a>
+                      <a class="nav-link bell active" href="index2.html"><i class="fas fa-bell"></i></a>
 
                     <li class="nav-item">
 
