--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="index5.html">Schedule</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index3.html">Homework</a>
+              <a class="nav-link active" href="index3.html">Homework</a>
             </li>
           </ul>
 
