--- a/index4.html
+++ b/index4.html
@@ -25,7 +25,7 @@
             <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
 
               <li class="nav-item pl ">
-                <a class="nav-link" href="index4.html">Attendance</a>
+                <a class="nav-link active" href="index4.html">Attendance</a>
               </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index5.html">Schedule</a>
